--- a/docs/terraformoptions.adoc
+++ b/docs/terraformoptions.adoc
@@ -376,6 +376,11 @@ EOT
 |true/false
 |true
 
+|`enable_operator_pv_encryption_in_transit`
+|Whether to encrypt data in transit between the instance, the boot volume, and the block volumes in Operator.
+|true/false
+|false
+
 |operator_image_id
 |Custom image id for the operator host
 |image_id or Oracle. If the value is set to Oracle, an Oracle Platform image will be used instead.
@@ -407,12 +412,7 @@ EOT
 | RUNNING/STOPPED
 | RUNNING
 
-|enable_operator_pv_encryption_in_transit
-|Whether to encrypt data in transit between the instance, the boot volume, and the block volumes in Operator.
-|true/false
-|false
-
-|operator_volume_kms_id
+|`operator_volume_kms_id`
 |The id of the OCI KMS key to be used as the master encryption key for Operator's boot volume/block volume encryption..
 |`ocid1.key.oc1....`
 |
