fix: fixed empty policy issue and added oke-tags to freeform_tags in terraform.tfvars.example
Signed-off-by: Nikhil Kota <srinivasa.nikhil.kota@oracle.com>

--- a/docs/instructions.adoc
+++ b/docs/instructions.adoc
@@ -74,11 +74,12 @@ If you wish to use {uri-oci-kms}[OCI KMS] to encrypt Kubernetes secrets, the fol
 * link:#adding-the-bastion-host[bastion must be enabled]
 * link:#enabling-instance_principal-on-the-operator-host[operator instance_principal must be enabled]
 
-use_encryption must be set to _true_
-kms_key_id must be provided
+* use_encryption must be set to _true_
+* kms_key_id must be provided
 
 If you wish to use {uri-oci-kms}[OCI KMS] to encrypt OKE nodepool boot/block volume, the following is required:
 
+* use_node_pool_volume_encryption must be set to true
 * node_pool_volume_kms_key_id must be provided
 
 If you wish to encrypt data in transit between the instance, the boot volume, and the block volumes in OKE node pool.
