--- a/docs/configuration.adoc
+++ b/docs/configuration.adoc
@@ -261,7 +261,7 @@ OKE Variables:-
 ----
 use_encryption = true
 kms_key_id = <kms_key_id>
-enable_pv_encryption_in_transit = false
+use_node_pool_volume_encryption = true
 node_pool_volume_kms_key_id = <node_pool_volume_kms_key_id>
 ----
 
