--- a/docs/configuration.adoc
+++ b/docs/configuration.adoc
@@ -259,8 +259,8 @@ create_bastion_host = true
 OKE Variables:-
 
 ----
-use_encryption = true
-kms_key_id = <kms_key_id>
+use_cluster_encryption = true
+cluster_kms_key_id = <cluster_kms_key_id>
 use_node_pool_volume_encryption = true
 node_pool_volume_kms_key_id = <node_pool_volume_kms_key_id>
 ----
