--- a/docs/instructions.adoc
+++ b/docs/instructions.adoc
@@ -75,7 +75,7 @@ If you wish to use {uri-oci-kms}[OCI KMS] to encrypt Kubernetes secrets, the fol
 * link:#enabling-instance_principal-on-the-operator-host[operator instance_principal must be enabled]
 
 * use_encryption must be set to _true_
-* kms_key_id must be provided
+* cluster_kms_key_id must be provided
 
 If you wish to use {uri-oci-kms}[OCI KMS] to encrypt OKE nodepool boot/block volume, the following is required:
 
