feat: Added fss storage module.  (#491)
* feat: Add FSS provisioning

* FSS Storage module added

* enable_fss changed to create_fss

* changed enable_fss to create_fss in main.tf

* added worker nsg for fss

* FSS nsg rules moved to network module

* formatting and removing create_fss variable

Co-authored-by: Karthic Ravindran <karthic.ravindran@oracle.com>

--- a/docs/configuration.adoc
+++ b/docs/configuration.adoc
@@ -259,7 +259,7 @@ create_bastion_host = true
 OKE Variables:-
 
 ----
-use_encryption = true
+use_cluster_encryption = true
 cluster_kms_key_id = <cluster_kms_key_id>
 use_node_pool_volume_encryption = true
 node_pool_volume_kms_key_id = <node_pool_volume_kms_key_id>
