--- a/docs/terraformoptions.adoc
+++ b/docs/terraformoptions.adoc
@@ -698,6 +698,16 @@ node_pools = {
 |
 |7.9
 
+|cloudinit_nodepool_common
+|Cloudinit common for all nodepools when no specific script mentioned for nodepool in cloudinit_nodepool.
+|
+|""
+
+|cloudinit_nodepool
+|Cloudinit specific to nodepool to override cloudinit_nodepool_common.
+|
+|{}
+
 |node_pool_timezone
 |The preferred timezone for the worker nodes. {uri-timezones}[List of timezones].
 |
