--- a/docs/terraformoptions.adoc
+++ b/docs/terraformoptions.adoc
@@ -699,12 +699,12 @@ node_pools = {
 |7.9
 
 |cloudinit_nodepool_common
-|Cloudinit common for all nodepools when no specific script mentioned for nodepool in cloudinit_nodepool.
+|cloud-init common for all nodepools when no specific script mentioned for nodepool in cloudinit_nodepool.
 |e.g.: `"/tmp/commoncloudinit.sh"`
 |""
 
 |cloudinit_nodepool
-|Cloudinit specific to nodepool to override cloudinit_nodepool_common.
+|cloud-init specific to nodepool to override cloudinit_nodepool_common.
 |e.g.: `cloudinit_nodepool = {
 np2 = "/tmp/np2cloudinit.sh"
 }`
