--- a/docs/quickstart.adoc
+++ b/docs/quickstart.adoc
@@ -133,13 +133,29 @@ terraform apply
 
 . In your project root, create a variables.tf file and add variables for your project. You can copy the existing {uri-variables}[variables.tf] in the OKE module root.
 
+. In your project root, create a versions.tf file and add the following:
+
++
+----
+terraform {
+  required_providers {
+    oci = {
+      source                = "oracle/oci"
+      configuration_aliases = [oci.home]
+      version               = ">= 4.67.3"
+    }
+  }
+  required_version = ">= 1.0.0"
+}
+----
+
 . In your project root, create a main.tf file and add the following:
 
 +
 ----
 module "oke" {
   source  = "oracle-terraform-modules/oke/oci"
-  version = "4.0.0"
+  version = "4.2.4"
   # insert the 9 required variables here
 }
 ----
@@ -159,7 +175,8 @@ module "oke" {
   ssh_public_key_path                   =   var.ssh_public_key_path
 
   label_prefix                          =   var.label_prefix
-  regions                               =   var.regions
+  home_region                           =   var.home_region
+  region                                =   var.region
 
   vcn_dns_label                         =   var.vcn_dns_label
   vcn_name                              =   var.vcn_name
